Fixing hamburger menu pushed out of screen.

--- a/style.css
+++ b/style.css
@@ -346,9 +346,9 @@ p{
         overflow-x: hidden;
     }
 
-    .navbar {
-        margin-left: 2%;
-        margin-right: 2%;
+    header {
+        padding-left: 1%;
+        padding-right: 3%;
     }
 
     .text-box h1 {
